tests/ui/submit-unrecognized.stderr
error[E0277]: the trait bound `Thing: Collect` is not satisfied
 --> tests/ui/submit-unrecognized.rs:3:1
  |
3 | inventory::submit!(Thing);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Collect` is not implemented for `Thing`
  |
  = note: required because of the requirements on the impl of `ErasedNode` for `Thing`
  = note: required for the cast to the object type `dyn ErasedNode`
  = note: this error originates in the macro `inventory::submit` (in Nightly builds, run with -Z macro-backtrace for more info)
